# great-problems

./: .gitattributes  .gitignore  ACE.imports  API.org  Ace.imports  Editor.imports  Frontend.imports  Global.imports  LICENSE  Lib.imports  Problem.Convert.imports  Problem.DownloadPrb.imports  Problem.Editor.imports  Problem.ErrorsToggle.imports  Problem.Figures.imports  Problem.Options.imports  Problem.PdfViewer.imports  Problem.Types.imports  Problem.UploadPrb.imports  Problem.imports  ProblemWidget.Convert.imports  ProblemWidget.Editor.imports  ProblemWidget.Options.imports  ProblemWidget.PdfViewer.imports  ProblemWidget.Types.imports  ProblemWidget.imports  README.org  Util.imports  default.nix  deploy.sh  startserver.sh  stopserver.sh  tailwind.config.js
backend/: backend.cabal
backend/src/: Auth.hs  Backend.hs  Compile.hs  Database.hs  Email.hs  S3.hs
backend/src/Backend/Lib/: Prelude.hs  Util.hs
backend/src/Database/: DevSeeds.hs  Queries.hs  Schema.hs  Seeds.hs
backend/src/Database/Migrations/: 0001-create-tables.sql  0002-create-meta-settings.sql  0002-insert-roles.sql  0003-edit-problem-sets.sql  0003-insert-problem-statuses.sql  0004-add-cascade-problem-set-problems.sql  0004-create-meta-settings.sql
backend/src/Database/Types/: EmailVerification.hs  Figure.hs  MetaSetting.hs  Problem.hs  ProblemSet.hs  ProblemSetProblem.hs  ProblemStatus.hs  ResetPassword.hs  Role.hs  Session.hs  Topic.hs  User.hs
backend/src/Route/: Actions.hs  Handlers.hs
common/: common.cabal
common/src/: Global.hs
common/src/Common/: Api.hs  Compile.hs  File.hs  FormFile.hs  Route.hs
common/src/Common/Api/: Auth.hs  ChangePassword.hs  Compile.hs  Email.hs  Error.hs  Figure.hs  MetaSetting.hs  NewProblem.hs  OkResponse.hs  Problem.hs  ProblemCard.hs  ProblemSet.hs  ProblemSetCard.hs  ProblemStatus.hs  ProblemTile.hs  Register.hs  Role.hs  Search.hs  Topic.hs  User.hs
common/src/Common/Api/Request/: Auth.hs  ChangePassword.hs  Register.hs  ResendEmail.hs
common/src/Common/Lib/: Prelude.hs
config/backend/: db.env  email.env.example  s3.env.example
dep-ext/ltspice2svg/: default.nix
dep-ext/problem2tex/: default.nix
dep/dotenv-hs/: github.json
dep/reflex-dom-ace/: github.json
dep/wreq/: github.json
frontend/: frontend.cabal
frontend/src/: ACE.hs  Ace.hs  AdminArea.hs  AdminDashboard.hs  Buttons.hs  EditProblem.hs  Editor.hs  Explore.hs  ForgotPassword.hs  Frontend.hs  Frontend_old.hs  Global.hs  Header.hs  Home.hs  Inputs.hs  Lib.hs  Problem.hs  ProblemCards.hs  ProblemSetCards.hs  ProblemWidget.hs  Profile.hs  Register.hs  ResendEmail.hs  ResetPassword.hs  Search.hs  Settings.hs  SignIn.hs  SignOut.hs  Tabs.hs  Topics.hs  Util.hs  VerifyEmail.hs  ViewProblem.hs
frontend/src-bin/: main.hs
frontend/src/AdminDashboard/: MetaSettings.hs  Topics.hs  Users.hs  Util.hs
frontend/src/Frontend/Lib/: Api.hs  LocalStorage.hs  Prelude.hs  SessionStorage.hs  Storage.hs  Util.hs
frontend/src/Layout/: CenteredNarrow.hs
frontend/src/MyReflex/Dom/Widget/: Basic.hs
frontend/src/MyReflex/Dom/Xhr/: FormData.hs
frontend/src/Problem/: Compile.hs  Convert.hs  DownloadPrb.hs  Duplicate.hs  Edit.hs  Editor.hs  ErrorsToggle.hs  Figures.hs  FormFile.hs  Loading.hs  Options.hs  PdfViewer.hs  SelectTopic.hs  Summary.hs  Types.hs  UploadPrb.hs  View.hs  Viewer.hs
frontend/src/ProblemWidget/: Convert.hs  Editor.hs  Options.hs  PdfViewer.hs  Types.hs
frontend/src/Widget/: Button.hs  Input.hs  Select.hs  Spinner.hs
frontend/src/Xhr/: FormData.hs
imports/: Auth.imports  Backend.imports  Buttons.imports  Common.Api.Auth.imports  Common.Api.Compile.imports  Common.Api.Error.imports  Common.Api.Figure.imports  Common.Api.NewProblem.imports  Common.Api.OkResponse.imports  Common.Api.Problem.imports  Common.Api.ProblemCard.imports  Common.Api.ProblemSet.imports  Common.Api.ProblemSetCard.imports  Common.Api.ProblemTile.imports  Common.Api.Register.imports  Common.Api.Role.imports  Common.Api.Topic.imports  Common.Api.User.imports  Common.Compile.imports  Common.File.imports  Common.Route.imports  Database.Queries.imports  Database.Schema.imports  Database.Seeds.imports  Database.Types.EmailVerification.imports  Database.Types.Figure.imports  Database.Types.Problem.imports  Database.Types.Role.imports  Database.Types.User.imports  Database.Types.imports  Database.imports  EditProblem.imports  Email.imports  Explore.imports  Frontend.imports  Global.imports  Header.imports  Home.imports  Inputs.imports  MyReflex.Dom.Widget.Basic.imports  (+29 more)
static/: fixMathJaxSVG.js  main.css  problem-viewer.css  tailwind.css
static/pdf.js/web/: viewer.js
