name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , postgresql-simple
               , postgresql-libpq
               , time-compat
               , dotenv
               , string-conversions
               , raw-strings-qq
               , wreq
               , time
               , lens
               , containers
               , text
               , case-insensitive
               , bytestring
               , base64-bytestring
               , random
               , pwstore-fast
               , snap-core
               , aeson
               , http-client
               , directory
  exposed-modules:
    Backend
  other-modules:
    Auth
    Database
    Email
    Backend.Lib.Util
    Database.Queries
    Database.Schema
    Database.Seeds
    Database.Types.EmailVerification
    Database.Types.Figure
    Database.Types.Problem
    Database.Types.ProblemSet
    Database.Types.ProblemSetProblem
    Database.Types.Role
    Database.Types.Session
    Database.Types.Topic
    Database.Types.User
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
             OverloadedStrings
             ScopedTypeVariables
             LambdaCase
             MultiWayIf

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
