name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , postgresql-simple
               , postgresql-libpq
               , postgresql-simple-migration
               , time-compat
               , dotenv
               , raw-strings-qq
               , wreq
               , time
               , containers
               , text
               , case-insensitive
               , bytestring
               , base64-bytestring
               , random
               , pwstore-fast
               , snap-core
               , aeson
               , http-client
               , temporary == 1.3
               , process == 1.6.5.0
               , filepath == 1.4.2.1
  exposed-modules:
    Backend
  other-modules:
    Auth
    Compile
    Database
    Email
    Route.Handlers
    Route.Actions
    Backend.Lib.Util
    Database.Queries
    Database.Seeds
    Database.DevSeeds
    Database.Types.EmailVerification
    Database.Types.Figure
    Database.Types.Problem
    Database.Types.ProblemStatus
    Database.Types.ProblemSet
    Database.Types.ProblemSetProblem
    Database.Types.Role
    Database.Types.Session
    Database.Types.Topic
    Database.Types.User
    Database.Types.ResetPassword
    Database.Types.MetaSetting
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
             OverloadedStrings
             ScopedTypeVariables
             LambdaCase
             MultiWayIf

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits -fwarn-tabs -funbox-strict-fields -fno-warn-unused-do-bind -rtsopts
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
