name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , containers
               , case-insensitive
               , string-conversions
               , categories
               , aeson
               , time
               , bytestring
  exposed-modules:
    Common.Route
    Common.Api.Auth
    Common.Api.Compile
    Common.Api.Error
    Common.Api.Figure
    Common.Api.OkResponse
    Common.Api.Problem
    Common.Api.ProblemSet
    Common.Api.ProblemSetCard
    Common.Api.Register
    Common.Api.Role
    Common.Api.Topic
    Common.Api.User
  other-modules:
    Common.Lib.Prelude
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
