name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , containers
               , case-insensitive
               , string-conversions
               , categories
               , aeson
               , time
               , bytestring
               , reflex
               , lens
               , reflex-dom-core
               , monad-loops
  exposed-modules:
    Common.Route
    Common.Lib.Prelude
    Common.Api.Compile
    Common.Api.Error
    Common.Api.Figure
    Common.Api.OkResponse
    Common.Api.Problem
    Common.Api.ProblemStatus
    Common.Api.ProblemSet
    Common.Api.ProblemSetCard
    Common.Api.Role
    Common.Api.Topic
    Common.Api.User
    Common.Api.Email
    Common.Api.Request.Auth
    Common.Api.Request.Register
    Common.Api.Request.ChangePassword
    Common.Api.Request.ResendEmail
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
