name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , reflex-dom
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , text
               , reflex-dom-ace
               , containers
               , lens
               , data-default
               , reflex
               , ghcjs-dom
               , cookie
               , aeson
               , case-insensitive
               , keycode
               , bytestring
               , base64-bytestring
               , filepath
               , time
               , raw-strings-qq
               , transformers
               , monad-loops
  exposed-modules:
    Frontend
  other-modules:
    AdminDashboard
    AdminDashboard.MetaSettings
    AdminDashboard.Topics
    AdminDashboard.Users
    AdminDashboard.Util
    ForgotPassword
    Frontend.Lib.Util
    Frontend.Lib.Storage
    Frontend.Lib.LocalStorage
    Frontend.Lib.SessionStorage
    Frontend.Lib.Api
    Header
    Home
    Layout.CenteredNarrow
    MyReflex.Dom.Widget.Basic
    MyReflex.Dom.Xhr.FormData
    Problem.View
    Problem.Edit
    Problem.Compile
    Problem.DownloadPrb
    Problem.Editor
    Problem.ErrorsToggle
    Problem.Figures
    Problem.FormFile
    Problem.Loading
    Problem.Viewer
    Problem.SelectTopic
    Problem.Summary
    Problem.UploadPrb
    Problem.Duplicate
    ProblemCards
    ProblemSetCards
    Register
    ResendEmail
    ResetPassword
    Search
    Settings
    SignIn
    SignOut
    Tabs
    VerifyEmail
    Widget.Button
    Widget.Input
    Widget.Select
    Widget.Spinner
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
             DataKinds
             OverloadedStrings
             TypeApplications
             RecursiveDo
             ScopedTypeVariables
             FlexibleContexts
             PartialTypeSignatures
             DeriveGeneric
             LambdaCase
             TypeFamilies
             MultiWayIf

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
